Bug 442058 - Floating messages do not refresh their duration if another floating message occurs during expiration
Summary: Floating messages do not refresh their duration if another floating message ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-05 23:03 UTC by tomtomtomreportingin
Modified: 2021-09-06 10:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-09-05 23:03:03 UTC
SUMMARY
Floating messages don't seem to refresh their duration if another floating message is called during their expiration.

Not a regression.

STEPS TO REPRODUCE
1. Zoom in. Observe floating message.
2. Zoom in about half a second later.

OBSERVED RESULT
The floating message resulting from step 2 barely appears/doesn't appear.

EXPECTED RESULT
Floating message durations shouldn't be negatively impacted by preceding floating messages.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.12.11 (Appimage)
Comment 1 Alvin Wong 2021-09-06 10:15:24 UTC
Git commit e75800899286eee5ace61380b7c68699f300af6d by Alvin Wong.
Committed on 06/09/2021 at 10:14.
Pushed by alvinwong into branch 'master'.

Fix floating message fadeout not being stopped by msg change

M  +1    -0    libs/ui/widgets/kis_floating_message.cpp

https://invent.kde.org/graphics/krita/commit/e75800899286eee5ace61380b7c68699f300af6d
Comment 2 Alvin Wong 2021-09-06 10:16:01 UTC
Git commit ed36f6ea95dd07bbae32c693752737fe0d2d2c64 by Alvin Wong.
Committed on 06/09/2021 at 10:15.
Pushed by alvinwong into branch 'krita/5.0'.

Fix floating message fadeout not being stopped by msg change


(cherry picked from commit e75800899286eee5ace61380b7c68699f300af6d)

M  +1    -0    libs/ui/widgets/kis_floating_message.cpp

https://invent.kde.org/graphics/krita/commit/ed36f6ea95dd07bbae32c693752737fe0d2d2c64