Fix floating message fadeout not being stopped by msg change

BUG: 442058